# Graph-Based-Digital-Logic-Simulation-Engine

./: .gitignore  1-Bit Switch.json  4-Bit Counter.json  4-Bit Switch.json  AGENTS.md  App.cpp  App.hpp  CMakeLists.txt  Canvas.cpp  Canvas.hpp  CanvasSerialization.cpp  Components.cpp  Components.hpp  CompositeComponent.hpp  CustomComponent.cpp  CustomComponent.hpp  CustomComponentScreen.hpp  Engine.hpp  Full Adder.json  Gates.hpp  IO.cpp  IO.hpp  Makefile  Net.cpp  Net.hpp  Pin.cpp  Pin.hpp  PowerRails.cpp  PowerRails.hpp  README.md  Simulator.cpp  Simulator.hpp  State.hpp  Tester 4-Bit Switch.json  TimingWheel.cpp  TimingWheel.hpp  custom_components.json  main.cpp
gates/: And.cpp  Gate.cpp
scratch/: Ports.cpp
tests/: latch_hold_test.cpp  test_nested_custom.cpp
